# miden-node

./: CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  rustfmt.toml
.github/actions/cleanup-runner/: action.yml
.github/actions/debian/: action.yml
.github/actions/install-rocksdb/: action.yml
.github/workflows/: book.yml  build-docker.yml  build-docs.yml  changelog.yml  deploy.yml  lint.yml  msrv.yml  network-monitor.yml  publish-debian-all.yml  publish-debian.yml  publish-docker.yml  publish-dry-run.yml  publish-main.yml  release-plz-dry-run.yml  release-plz.yml  stress-test-check.yml  test-beta.yml  test.yml  trigger-deploy-docs.yml
crates/block-producer/: Cargo.toml
crates/block-producer/src/: errors.rs  errors_test.rs  lib.rs
crates/block-producer/src/batch_builder/: mod.rs
crates/block-producer/src/block_builder/: mod.rs
crates/block-producer/src/domain/: batch.rs  mod.rs  transaction.rs
crates/block-producer/src/mempool/: batch_graph.rs  budget.rs  mod.rs  nodes.rs  state.rs  subscription.rs  tests.rs  transaction_expiration.rs  transaction_graph.rs
crates/block-producer/src/mempool/graph/: mod.rs
crates/block-producer/src/mempool/inflight_state/: account_state.rs  mod.rs  tests.rs
crates/block-producer/src/mempool/tests/: add_transaction.rs
crates/block-producer/src/server/: mod.rs  tests.rs
crates/block-producer/src/store/: mod.rs
crates/block-producer/src/test_utils/: account.rs  batch.rs  mod.rs  note.rs  proven_tx.rs
crates/block-producer/src/validator/: mod.rs
crates/grpc-error-macro/: Cargo.toml  README.md
crates/grpc-error-macro/src/: lib.rs
crates/ntx-builder/: Cargo.toml
crates/ntx-builder/src/: block_producer.rs  builder.rs  coordinator.rs  lib.rs  store.rs  transaction.rs
crates/ntx-builder/src/actor/: account_state.rs  execute.rs  inflight_note.rs  mod.rs  note_state.rs
crates/ntx-builder/src/builder/: mod.rs
crates/ntx-builder/src/state/: account.rs  mod.rs  tests.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/src/: errors.rs  lib.rs
crates/proto/src/clients/: mod.rs
crates/proto/src/domain/: account.rs  batch.rs  block.rs  digest.rs  errors.rs  mempool.rs  merkle.rs  mod.rs  note.rs  nullifier.rs  proof_request.rs  transaction.rs
crates/proto/src/domain/account/: tests.rs
crates/proto/src/errors/: mod.rs  test_macro.rs
crates/remote-prover-client/: Cargo.toml  build.rs
crates/remote-prover-client/src/: lib.rs
crates/remote-prover-client/src/remote_prover/: batch_prover.rs  block_prover.rs  tx_prover.rs
crates/rocksdb-cxx-linkage-fix/: Cargo.toml
crates/rocksdb-cxx-linkage-fix/src/: lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: lib.rs  tests.rs
crates/rpc/src/client/: api.rs  interceptor.rs
crates/rpc/src/server/: accept.rs  api.rs  health.rs  mod.rs  validator.rs
crates/store/: Cargo.toml  README.md  build.rs
crates/store/benches/: account_tree.rs  account_tree_historical.rs
crates/store/src/: blocks.rs  constants.rs  errors.rs  lib.rs  state.rs
crates/store/src/accounts/: mod.rs  tests.rs
crates/store/src/db/: manager.rs  migrations.rs  mod.rs  schema.rs  schema_hash.rs  tests.rs
crates/store/src/db/migrations/: 001-init.sql
crates/store/src/db/migrations/2025062000000_setup/: up.sql
crates/store/src/db/models/: conv.rs  mod.rs  queries.rs  types.rs  utils.rs
crates/store/src/db/models/queries/: accounts.rs  block_headers.rs  insertions.rs  mod.rs  notes.rs  nullifiers.rs  transactions.rs
crates/store/src/db/models/queries/accounts/: at_block.rs  tests.rs
crates/store/src/db/query_plan/: mod.rs
crates/store/src/db/sql/: mod.rs  utils.rs
crates/store/src/db/sql/queries/: select_notes_since_block_by_tag_and_sender.sql
crates/store/src/genesis/: mod.rs
crates/store/src/genesis/config/: errors.rs  mod.rs  tests.rs
crates/store/src/genesis/config/samples/: 01-simple.toml
crates/store/src/inner_forest/: mod.rs  tests.rs
crates/store/src/server/: api.rs  block_producer.rs  db_maintenance.rs  mod.rs  ntx_builder.rs  rpc_api.rs
crates/store/src/state/: apply_block.rs  loader.rs  mod.rs  sync_state.rs
crates/test-macro/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  crypto.rs  fee.rs  formatting.rs  lib.rs  limiter.rs  logging.rs  lru_cache.rs  panic.rs
crates/utils/src/tracing/: grpc.rs  span_ext.rs
crates/utils/src/version/: mod.rs
crates/validator/: Cargo.toml  README.md
crates/validator/src/: lib.rs
crates/validator/src/block_validation/: mod.rs
crates/validator/src/server/: mod.rs
crates/validator/src/tx_validation/: data_store.rs  mod.rs
docs/internal/: book.toml
docs/internal/src/: codebase.md  components.md  index.md  monitoring.md  rpc.md  store.md
docs/src/developer/: codebase.md  rpc.md
docs/src/operator/: architecture.md  installation.md  usage.md
docs/src/user/: rpc.md
packaging/faucet/: postinst  postrm
packaging/network-monitor/: miden-network-monitor.service  postinst  postrm
packaging/node/: postinst  postrm
proto/: Cargo.toml  build.rs
proto/proto/: README.md  block_producer.proto  merkle.proto  note.proto  remote_prover.proto  responses.proto  rpc.proto  smt.proto  validator.proto
proto/proto/internal/: block_producer.proto  store.proto  validator.proto
proto/proto/store/: block_producer.proto  ntx_builder.proto  rpc.proto  shared.proto
proto/proto/types/: account.proto  blockchain.proto  errors.proto  note.proto  primitives.proto  transaction.proto
proto/src/: lib.rs
scripts/: check-features.sh  check-msrv.sh  deploy.sh  publish-crates.sh
