[package]
authors.workspace      = true
description            = "Miden node protobuf bindings builder"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "protobuf", "rpc"]
license.workspace      = true
name                   = "miden-node-proto-build"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[features]
# Enables the gRPC file descriptors for the internal component APIs,
# i.e. the `store` and `block-producer` gRPC services.
internal = []

[lints]
workspace = true

[dependencies]
protox            = { workspace = true }
tonic-prost-build = { workspace = true }

[build-dependencies]
fs-err = { workspace = true }
miette = { version = "7.6" }
protox = { workspace = true }
