[package]
authors.workspace      = true
description            = "Miden node message definitions (Store, Block Producer and RPC)"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "protobuf", "rpc"]
license.workspace      = true
name                   = "miden-node-proto"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                      = { workspace = true }
hex                         = { version = "0.4" }
http                        = { workspace = true }
miden-node-grpc-error-macro = { workspace = true }
miden-node-utils            = { workspace = true }
miden-protocol              = { workspace = true }
prost                       = { workspace = true }
thiserror                   = { workspace = true }
tonic                       = { default-features = true, workspace = true }
tonic-prost                 = { workspace = true }
url                         = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
proptest       = { version = "1.7" }

[build-dependencies]
fs-err                 = { workspace = true }
miden-node-proto-build = { features = ["internal"], workspace = true }
miette                 = { version = "7.6" }
tonic-prost-build      = { workspace = true }
