[package]
authors.workspace      = true
description            = "Client library for the Miden blockchain remote prover"
edition.workspace      = true
keywords               = ["client", "miden", "prover", "remote"]
license.workspace      = true
name                   = "miden-remote-prover-client"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["lib"]

[features]
batch-prover = ["dep:miden-objects", "dep:tokio"]
block-prover = ["dep:miden-objects", "dep:tokio"]
default      = ["std"]
std          = ["miden-objects/std", "miden-tx/std"]
tx-prover    = ["dep:miden-objects", "dep:miden-tx", "dep:tokio"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom             = { features = ["wasm_js"], version = "0.3" }
tonic                 = { default-features = false, features = ["codegen"], version = "0.14" }
tonic-web-wasm-client = { default-features = false, version = "0.8" }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tonic = { default-features = false, features = [
  "codegen",
  "tls-native-roots",
  "tls-ring",
  "transport",
], version = "0.14" }
tonic-web = { optional = true, version = "0.14" }

[lints]
workspace = true

[dependencies]
miden-objects = { optional = true, workspace = true }
miden-tx      = { optional = true, workspace = true }
prost         = { default-features = false, features = ["derive"], version = "0.14" }
thiserror     = { workspace = true }
tokio         = { default-features = false, features = ["sync"], optional = true, version = "1.44" }
tonic-prost   = { workspace = true }

[build-dependencies]
fs-err                 = { workspace = true }
miden-node-proto-build = { workspace = true }
miette                 = { features = ["fancy"], version = "7.5" }
tonic-prost-build      = { workspace = true }
