[package]
authors.workspace      = true
description            = "Miden C++ stdlib link helper"
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "miden-node-rocksdb-cxx-linkage-fix"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
