[package]
authors.workspace      = true
description            = "Miden node's front-end RPC server"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "rpc"]
license.workspace      = true
name                   = "miden-node-rpc"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                 = { workspace = true }
futures                = { version = "0.3" }
http                   = { workspace = true }
mediatype              = { version = "0.20" }
miden-node-proto       = { workspace = true }
miden-node-proto-build = { workspace = true }
miden-node-utils       = { workspace = true }
miden-objects          = { default-features = true, workspace = true }
miden-tx               = { default-features = true, workspace = true }
semver                 = { version = "1.0" }
thiserror              = { workspace = true }
tokio                  = { features = ["macros", "net", "rt-multi-thread"], workspace = true }
tokio-stream           = { features = ["net"], workspace = true }
tonic                  = { features = ["tls-native-roots", "tls-ring"], workspace = true }
tonic-reflection       = { workspace = true }
tonic-web              = { version = "0.13" }
tower                  = { workspace = true }
tower-http             = { features = ["trace"], workspace = true }
tracing                = { workspace = true }
url                    = { workspace = true }

[dev-dependencies]
miden-air        = { default-features = true, features = ["testing"], workspace = true }
miden-node-store = { workspace = true }
miden-node-utils = { features = ["tracing-forest"], workspace = true }
miden-objects    = { default-features = true, features = ["testing"], workspace = true }
reqwest          = { version = "0.12" }
rstest           = { workspace = true }
tempfile         = { version = "3.20" }
