[package]
authors.workspace      = true
description            = "Miden node's state store component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "store"]
license.workspace      = true
name                   = "miden-node-store"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                 = { workspace = true }
bigdecimal             = { version = "0.4" }
deadpool               = { default-features = false, features = ["managed", "rt_tokio_1"], version = "0.12" }
deadpool-diesel        = { features = ["sqlite"], version = "0.6" }
deadpool-sync          = { version = "0.1" }
diesel                 = { features = ["numeric", "sqlite"], version = "2.2" }
diesel_migrations      = { features = ["sqlite"], version = "2.2" }
hex                    = { version = "0.4" }
indexmap               = { workspace = true }
miden-lib              = { workspace = true }
miden-node-proto       = { workspace = true }
miden-node-proto-build = { features = ["internal"], workspace = true }
miden-node-utils       = { workspace = true }
miden-objects          = { workspace = true }
rand                   = { workspace = true }
rand_chacha            = { workspace = true }
serde                  = { features = ["derive"], version = "1" }
thiserror              = { workspace = true }
tokio                  = { features = ["fs", "rt-multi-thread"], workspace = true }
tokio-stream           = { features = ["net"], workspace = true }
toml                   = { version = "0.8" }
tonic                  = { workspace = true }
tonic-reflection       = { workspace = true }
tower-http             = { features = ["util"], workspace = true }
tracing                = { workspace = true }

[dev-dependencies]
assert_matches        = { workspace = true }
miden-lib             = { features = ["testing"], workspace = true }
miden-node-test-macro = { workspace = true }
miden-node-utils      = { features = ["testing", "tracing-forest"], workspace = true }
miden-objects         = { default-features = true, features = ["testing"], workspace = true }
pretty_assertions     = { workspace = true }
rand                  = { workspace = true }
regex                 = { version = "1.11" }
termtree              = { version = "0.5" }
